--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
                                 <a href="#" class="place-buy-btn">Buy Tickets</a>
                             </div>
                         </div>
-
+                        
                         <div class="place-item">
                             <img src="./assets/img/Place/place2.jpg" alt="New York" class="place-img">
                             <div class="place-body">
-                                <h3 class="place-heading">New York</h3>
-                                <p class="place-time">Fri 27 Nov 2016</p>
+                                <h3 class="place-heading">Paris</h3>
+                                <p class="place-time">Sat 28 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                                 <a href="#" class="place-buy-btn">Buy Tickets</a>
                             </div>
@@ -107,8 +107,8 @@
                         <div class="place-item">
                             <img src="./assets/img/Place/place3.jpg" alt="New York" class="place-img">
                             <div class="place-body">
-                                <h3 class="place-heading">New York</h3>
-                                <p class="place-time">Fri 27 Nov 2016</p>
+                                <h3 class="place-heading">San Francisco</h3>
+                                <p class="place-time">Sun 29 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                                 <a href="#" class="place-buy-btn">Buy Tickets</a>
                             </div>
