--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
     </div>
 
-    <div class="modal">
+    <div class="modal open">
         <div class="modal-container">
             <div class="modal-close">
                 <i class="ti-close"></i>
@@ -142,17 +142,17 @@
             </header>
 
             <div class="modal-body">
-                <label for="" class="modal-label">
+                <label for="tickets-quantity" class="modal-label">
                     <i class="ti-shopping-cart"></i>
                     Tickets, $15 per person
                 </label>
-                <input type="text" class="modal-input" placeholder="How many?">
+                <input id="tickets-quantity" type="text" class="modal-input" placeholder="How many?">
 
-                <label for="" class="modal-label">
+                <label for="tickets-email" class="modal-label">
                     <i class="ti-user"></i>
                     Send to
                 </label>
-                <input type="email" class="modal-input" placeholder="Enter email...">
+                <input id="tickets-email" type="email" class="modal-input" placeholder="Enter email...">
 
                 <button id="buy-tickets">
                     Pay <i class="ti-check"></i>
