--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         </div>
 
         <div class="slider">
-            <img src="/assets/img/Slider/bp1.jpg" alt="Image 1">
-            <img src="/assets/img/Slider/bp2.jpg" alt="Image 2">
+            <img src="./assets/img/Slider/bp1.jpg" alt="Image 1">
+            <img src="./assets/img/Slider/bp2.jpg" alt="Image 2">
         </div>
 
         <div id="content">
             <!-- About section -->
             <div class="content-section">
-                <img src="/assets/img/Band/logo.png" alt="" class="logo">
+                <img src="./assets/img/Band/logo.png" alt="" class="logo">
                 <h2 class="section-heading">BORN PINK</h2>
                 <!-- <p class="section-sub-heading">WORLD TOUR SEOUL</p>
                 <p class="about-text">GOCHEOK SKY DOME</p> -->
